--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -247,7 +247,7 @@ footer { padding: 15px; }
   padding: 0;  
   overflow-x: hidden;
 }
-.templatemo-content-container {	padding: 40px 50px; }
+.templatemo-content-container {	/*padding: 40px 50px;*/ }
 .templatemo-flex-row {
 	display: -webkit-flex;
 	display: -ms-flexbox;
@@ -382,7 +382,7 @@ footer { padding: 15px; }
 	text-transform: uppercase;
 	vertical-align: middle;
 }
-.templatemo-login-form .form-group { margin-bottom: 20px; }
+.templatemo-login-form .form-group { margin-bottom: 8px; }
 .templatemo-login-form .form-group:last-child {	margin-bottom: 0; }
 .input-group-addon { background: ; }
 .btn-primary {
@@ -590,7 +590,7 @@ input[type="radio"]:checked + label span {
 ------------------------------*/
 @media screen and (max-width: 1199px) and (min-width: 991px) {
 	.templatemo-site-header { margin: 25px; }
-	.templatemo-sidebar { width: 250px;	}
+	.templatemo-sidebar { width: 250px;	height:100%;background-repeat: no-repeat;background-size: cover;}
 	.templatemo-search-form { margin: 20px; }
 	nav li { font-size: 1em; }
 	.templatemo-left-nav a { padding: 15px; }
